hphp/hack/test/typecheck/inout/bad_inout_use_call3.php.like_types.exp
File "bad_inout_use_call3.php", line 14, characters 10-12:
Invalid return type (Typing[4110])
File "bad_inout_use_call3.php", line 11, characters 31-38:
Expected ~vec<~int> because it is an unenforceable type
File "bad_inout_use_call3.php", line 3, characters 29-36:
But got vec<~arraykey>
File "bad_inout_use_call3.php", line 13, characters 11-23:
Expected argument marked inout to be contained in a local or a value-typed container (e.g. vec, dict, keyset, array). To use inout here, assign to/from a temporary local variable. (Typing[4208])
File "bad_inout_use_call3.php", line 3, characters 29-36:
This is a dynamic value or an object of type vec<~int> because it is an unenforceable type
